[gd_scene load_steps=7 format=3 uid="uid://dpyylmdu3cgrn"]

[ext_resource type="Script" uid="uid://conek8201w0wb" path="res://choose_level_screen.gd" id="1_pplqd"]
[ext_resource type="Texture2D" uid="uid://dxrghnj8mpda1" path="res://Naipe_copas.png" id="2_gjt8u"]
[ext_resource type="Texture2D" uid="uid://cttqvwy1jg1kv" path="res://Naipe_paus.png" id="3_lkq6h"]
[ext_resource type="Texture2D" uid="uid://b41mf7t8l6x7j" path="res://Naipe_ouros.png" id="4_w6cq5"]
[ext_resource type="Texture2D" uid="uid://lqnrf1vlveqn" path="res://Naipe_espadas.png" id="5_mf7rd"]
[ext_resource type="Texture2D" uid="uid://cvv4owk4wbg6p" path="res://cadeado.png" id="6_7tskr"]

[node name="ChooseLevelScreen" type="Node2D"]
script = ExtResource("1_pplqd")

[node name="bg" type="ColorRect" parent="."]
offset_top = 1.0
offset_right = 1153.0
offset_bottom = 645.0
color = Color(0.555837, 0.523579, 0.540252, 1)

[node name="lvl1_unlocked" type="ColorRect" parent="."]
offset_left = 144.0
offset_top = 268.0
offset_right = 323.0
offset_bottom = 512.0
color = Color(0, 0.690196, 0, 1)

[node name="lvl2_unlocked" type="ColorRect" parent="."]
offset_left = 376.0
offset_top = 266.0
offset_right = 567.0
offset_bottom = 520.0
color = Color(0, 0.686275, 0, 1)

[node name="lvl3_unlocked" type="ColorRect" parent="."]
offset_left = 608.0
offset_top = 268.0
offset_right = 796.0
offset_bottom = 519.0
color = Color(0, 0.682353, 0, 1)

[node name="lvl4_unlocked" type="ColorRect" parent="."]
offset_left = 829.0
offset_top = 267.0
offset_right = 1009.0
offset_bottom = 509.0
color = Color(0, 0.678431, 0, 1)

[node name="lvl1_locked" type="ColorRect" parent="."]
offset_left = 146.0
offset_top = 269.0
offset_right = 324.0
offset_bottom = 512.0
color = Color(1, 0.0196078, 0, 1)

[node name="lvl2_locked" type="ColorRect" parent="."]
offset_left = 375.0
offset_top = 264.0
offset_right = 572.0
offset_bottom = 523.0
color = Color(0.996078, 0.0196078, 0, 1)

[node name="lvl3_locked" type="ColorRect" parent="."]
offset_left = 607.0
offset_top = 265.0
offset_right = 798.0
offset_bottom = 521.0
color = Color(0.992157, 0.0196078, 0, 1)

[node name="lvl4_locked" type="ColorRect" parent="."]
offset_left = 826.0
offset_top = 263.0
offset_right = 1012.0
offset_bottom = 511.0
color = Color(0.988235, 0.0196078, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="lvl1_imagem" type="TextureRect" parent="."]
offset_left = 194.0
offset_top = 529.0
offset_right = 267.0
offset_bottom = 606.0
texture = ExtResource("2_gjt8u")
expand_mode = 1

[node name="lvl2_imagem" type="TextureRect" parent="."]
offset_left = 447.0
offset_top = 531.0
offset_right = 512.0
offset_bottom = 597.0
texture = ExtResource("3_lkq6h")
expand_mode = 1

[node name="lvl3_imagem" type="TextureRect" parent="."]
offset_left = 664.0
offset_top = 513.0
offset_right = 769.0
offset_bottom = 601.0
texture = ExtResource("4_w6cq5")
expand_mode = 1

[node name="lvl4_imagem" type="TextureRect" parent="."]
offset_left = 869.0
offset_top = 502.0
offset_right = 965.0
offset_bottom = 593.0
texture = ExtResource("5_mf7rd")
expand_mode = 1

[node name="labels" type="Node" parent="."]

[node name="Label3" type="Label" parent="labels"]
offset_left = 421.0
offset_top = 183.0
offset_right = 522.0
offset_bottom = 254.0
text = "NÍVEL 2
GEOMETRIA"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="labels"]
offset_left = 169.0
offset_top = 191.0
offset_right = 270.0
offset_bottom = 262.0
text = "NÍVEL 1
FUNÇÕES"
horizontal_alignment = 1

[node name="Label" type="Label" parent="labels"]
offset_left = 5.0
offset_top = -3.0
offset_right = 1152.0
offset_bottom = 642.0
text = "SELEÇÃO DE NÍVEIS"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="labels"]
offset_left = 646.0
offset_top = 187.0
offset_right = 747.0
offset_bottom = 258.0
text = "NÍVEL 3
ESTATÍSTICA"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="labels"]
offset_left = 861.0
offset_top = 182.0
offset_right = 968.0
offset_bottom = 236.0
text = "NÍVEL 4
ARITMÉTICA"
horizontal_alignment = 1

[node name="buttons" type="Node" parent="."]

[node name="Button" type="Button" parent="buttons"]
unique_name_in_owner = true
offset_left = 139.0
offset_top = 264.0
offset_right = 330.0
offset_bottom = 518.0
text = "NÍVEL 1
FUNÇÕES"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="buttons"]
unique_name_in_owner = true
offset_left = 367.0
offset_top = 255.0
offset_right = 582.0
offset_bottom = 532.0
text = "NÍVEL 2
GEOMETRIA"

[node name="Button3" type="Button" parent="buttons"]
unique_name_in_owner = true
offset_left = 599.0
offset_top = 254.0
offset_right = 804.0
offset_bottom = 530.0
text = "NÍVEL 3
ESTATÍSTICA"

[node name="Button4" type="Button" parent="buttons"]
unique_name_in_owner = true
offset_left = 818.0
offset_top = 254.0
offset_right = 1030.0
offset_bottom = 526.0
text = "NÍVEL 4
ARITMÉTICA"

[node name="voltar_btn" type="Button" parent="buttons"]
offset_left = 11.0
offset_top = 11.0
offset_right = 136.0
offset_bottom = 67.0
text = "VOLTAR"

[node name="cadeados" type="Node" parent="."]

[node name="Cadeado3" type="Sprite2D" parent="cadeados"]
position = Vector2(917, 449)
scale = Vector2(0.152344, 0.152344)
texture = ExtResource("6_7tskr")

[node name="Cadeado" type="Sprite2D" parent="cadeados"]
position = Vector2(468, 458)
scale = Vector2(0.152344, 0.152344)
texture = ExtResource("6_7tskr")

[node name="Cadeado2" type="Sprite2D" parent="cadeados"]
position = Vector2(702, 454)
scale = Vector2(0.152344, 0.152344)
texture = ExtResource("6_7tskr")

[connection signal="pressed" from="buttons/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="buttons/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="buttons/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="buttons/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="buttons/voltar_btn" to="." method="_on_voltar_btn_pressed"]
